--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-fastapi == 0.70.1
-uvicorn == 0.16.0
-pydantic[email]~=1.9.2
-motor == 2.5.1
+fastapi~=0.70.1
+uvicorn~=0.16.0
+motor
+pymongo~=3.12.3
+pydantic~=1.9.2
